--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="food12.jpeg" alt="food12">
+    <div class="box" >
+    <img src="food12.jpeg" alt="">
+    <img src="photo/food6.png" alt="">
+    <img src="photo/food7.jpeg" alt="">
+     </div>
+     <h1>this is a test</h1>
     
 </body>
 </html>
